--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -11,16 +11,23 @@ li {
   padding: 0;
 }
 
+#main {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+}
 #page {
   height: 100%;
 
   #sidebar {
+    position: fixed;
     width: @sidebarWidth;
     height: 100%;
     background: royalblue;
     padding: 16px 0 0 0px;
 
-    #roomInputForm {
+    #roomForm {
       margin-left: 8px;
     }
 
