server-side rendering

--- a/views/react.ejs
+++ b/views/react.ejs
@@ -1,2 +1,4 @@
-<div id="main">
+<div id="app">
+  <section id="main" class="body__wrap"><%- markup %></section>
+  <script id="initial-data" type="text/plain" data-json="<%= initialData %>"></script>
 </div>
